--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,13 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  padding-left: 80px;
-  padding-right: 80px;
+}
+
+header,
+footer {
+  @apply container mx-auto px-4 py-4 lg:px-20 lg:py-6
+}
+
+.section {
+  @apply container mx-auto px-4 py-4 lg:px-20 lg:py-[60px]
 }
